--- a/index.html
+++ b/index.html
@@ -12,21 +12,46 @@
     <script src="js/app.js" type="module"></script>
     <link href="https://fonts.googleapis.com/css?family=Lora:400,400i,700,700i|Open+Sans:300,300i,400,400i,700,700i,800,800i" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
+    <script language="JavaScript">
+        function countit(fldobj,max)
+        {
+            var count=0
+            var len=0
+            var formcontent=fldobj.value // grab the text from the textarea
+            formcontent=formcontent.split(" ") // split the words into an array
+            for(i=0;i<formcontent.length;i++)
+            {
+                if(formcontent[i]=="") // Count the number of spaces or nulls
+                {
+                    count++
+                }
+            }
+            len=formcontent.length-count // subtract spaces or nulls from the length
+            window.status="You have entered "+len+" words."
+            if(len>max)
+            {alert(max+" is the max!")}
+        }
+    </script>
+
 </head>
 
 <body>
 
-    <header>
+    <header class="navegacion">
+        <nav class="mobile">
+            <div class="boton-menu">
+                <a href="#menu-superior" id="abrir" class="fas fa-bars"></a>
+                <a href="#" id="cerrar" class="fas fa-igloo"></a>
+            </div>
+        </nav>
 
-        <i class="fas fa-bars"></i>
-
-        <nav class="menu1">
+        <nav class="menu-desplegable hide" id="menu-superior">
             <ul>
                 <li><a href="#portada" class="active">Portada</a></li>
                 <li><a href="#quiensoy">Quien Soy</a></li>
                 <li><a href="#estudios">Estudios</a></li>
                 <li><a href="#experiencia">Experiencia</a></li>
-                <li><a href="#sobremi" onclick="smooth()">Sobre mí</a></li>
+                <li><a href="#sobremi">Sobre mí</a></li>
                 <li><a href="#contacto">Contacto</a></li>
             </ul>
         </nav>
@@ -34,204 +59,186 @@
     </header>
 
  <!--<main>-->
-    <div class="wrapper-prueba">
 
-    <main>
+    <div class="wrapper-main">
+        <main>
+            <section id="home">
+                <div class="wrapper-home">
+                    <header class="header-home">
+                        <h1>Rafael Lucena Martínez</h1>
+                        <p>Desarrollador web</p>
+                    </header>
+                </div>
+            </section>
+            <section id="quiensoy">
+                <div class="division">
+                    <div class="content-wrapper">
+                        <header class="header-quiensoy">
+                            <h1>Quien soy</h1>
+                            <p> Mi pasión es ayudar a <strong>resolver problemas empresariales</strong> y aportar soluciones de negocio mediante la utilización de las <strong>tecnologías de la información</strong> más adecuadas a cada proyecto</p>
+                        </header>
+                    </div>
+                    <figure>
+                        <img class="foto" src="assets/foto.png" alt="foto personal">
+                    </figure>
+                </div>
+            </section>
+            <section id="estudios">
+                <div class="content-wrapper">
+                    <header class="header-estudios">
+                        <h1>Estudios</h1>
+                    </header>
+                    <article>
+                        <ul>
+                            <li>Bootcamp Desarrollo Web</li>
+                            <br>
+                            <ul>
+                            <li>KeepCoding • Actualidad</li>
+                        </ul>
+                        <br>
+                        <br>
 
-    <section id="home">
+                            <li>Big Data & Machine Learning Bootcamp</li>
+                            <br>
+                        <ul>
+                            <li>KeepCoding • 2017</li>
+                        </ul>
+                        <br>
+                        <br>
+                            <li>Máster en Ecommerce y Marketing Digital</li>
+                            <br>
+                        <ul>
+                            <li>Escuela Ecommaster • 2016 - 2017</li>
+                        </ul>
+                        <br>
+                        <br>
+                            <li>Máster of Business Administration – MBA</li>
+                        <br>
+                        <ul>
+                            <li>Universidad Católica de Valencia 2012 – 2013</li>
+                        </ul>
+                        <br>
+                        <br>
+                            <li>Programa de Dirección Financiera</li>
+                        <br>
+                        <ul>
+                            <li>Fundación de Estudios Bursátiles y Financieros • 2009 - 2010 </li>
+                        </ul>
+                        <br>
+                        <br>
+                            <li>Ingeniero de Organización Industrial</li>
+                        <br>
+                        <ul>
+                            <li>Universidad Politécnica de Valencia • 2005 - 2007 </li>
+                        </ul>
+                        <br>
+                        <br>
+                            <li>Ingeniero Técnico de Telecomunicaciones Especialidad Telemática</li>
+                        <br>
+                        <ul>
+                            <li>Universidad Politécnica de Valencia • 2001 - 2005 </li>
+                        </ul>
+                        <br>
+                        <br>
+                        </ul>
 
-        <header class="header-home">
-            <h1>Rafael Lucena Martínez</h1>
-            <p>Desarrollador web</p>
-        </header>
-
-
-        <article>
-            <div class="wrapper-content">
-
-            </div>
-        </article>
-
-
-    </section>
-
-
-    <section id="quiensoy">
-        <header class="header-quiensoy">
-            <h1>Quien soy</h1>
-        </header>
-
-        <p> Mi pasión es ayudar a resolver problemas empresariales y aportar soluciones de negocio mediante la utilización de las tecnologías de la información más adecuadas a cada proyecto</p>
-    </section>
-
-
-    <section id="estudios">
-        <header class="header-estudios">
-            <div class="wrapper-content">
-            <h1>Estudios</h1>
-            </div>
-        </header>
-
-        <article>
-            <ul>
-                <li>Bootcamp Desarrollo Web</li>
-                <br>
+                    </article>
+                </div>
+            </section>
+            <section id="experiencia">
+                <header class="header-experiencia">
+                    <h1>Experiencia prueba</h1>
+                </header>
+                <article>
+                    <div class="content-wrapper">
+                        <ul>
+                            <li>Human Resources Operation Manager • Recrufrance • Septiembre 2014 - Enero 2018</li>
+                            <br>
+                        </ul>
+                        <ul>
+                            <li>Encargado de reclutamiento de personal sanitario para trabajar en Francia</li>
+                            <li>Gestión de toda la documentación necesaria para la incorporación al mercado laboral del personal sanitario</li>
+                        </ul>
+                        <br>
+                        <br>
+                            <li>European Project Manager • Freelance • Octubre 2013 - Mayo 2014</li>
+                        <br>
+                        <ul>
+                            <li>Realización de memorias para obtener financiación de empresas</li>
+                        </ul>
+                        <br>
+                        <br>
+                            <li>Director • Global Web Talent • Diciembre 2013 - Actualidad</li>
+                        <br>
+                        <ul>
+                            <li>Desarrollo de páginas web para distintos sectores</li>
+                        </ul>
+                        <br>
+                        <br>
+                        <ul><
+                            <li>Director de Área De Financiación y Ayudas Públicas • Altair Consultores • Septiembre 2008 - Octubre 2013</li>
+                            <br>
+                        </ul>
+                        <ul>
+                            <li>Realización de planes de negocio para distintos tipos de sectores</li>
+                            <li>Acciones comerciales de los servicios del departamento</li>
+                            <li>Realización y cumplimiento del presupuesto económico</li>
+                            <li>Gestión y dirección del equipo humano para la consecución de los objetivos</li>
+                        </ul>
+                        <br>
+                        <br>
+                    </div>
+                </article>
+            </section>
+            <section id="sobremi">
+                <header class="header-sobremi">
+                    <h1>Sobre mí</h1>
+                    <p>Algunos de mis intereses y aficiones</p>
+                </header>
                 <ul>
-                    <li>KeepCoding • Actualidad</li>
+                    <li>La natación me mantiene en forma y activo durante el día</li>
+                    <li>Los mercados bursátiles son mi gran afición</li>
                 </ul>
-                <br>
-                <br>
-
-                <li>Big Data & Machine Learning Bootcamp</li>
-                <br>
-                <ul>
-                    <li>KeepCoding • 2017</li>
-                </ul>
-                <br>
-                <br>
-                <li>Máster en Ecommerce y Marketing Digital</li>
-                <br>
-                <ul>
-                    <li>Escuela Ecommaster • 2016 - 2017</li>
-                </ul>
-                <br>
-                <br>
-                <li>Máster of Business Administration – MBA</li>
-                <br>
-                <ul>
-                    <li>Universidad Católica de Valencia 2012 – 2013</li>
-                </ul>
-                <br>
-                <br>
-                <li>Programa de Dirección Financiera</li>
-                <br>
-                <ul>
-                    <li>Fundación de Estudios Bursátiles y Financieros • 2009 - 2010 </li>
-                </ul>
-                <br>
-                <br>
-                <li>Ingeniero de Organización Industrial</li>
-                <br>
-                <ul>
-                    <li>Universidad Politécnica de Valencia • 2005 - 2007 </li>
-                </ul>
-                <br>
-                <br>
-                <li>Ingeniero Técnico de Telecomunicaciones Especialidad Telemática</li>
-                <br>
-                <ul>
-                    <li>Universidad Politécnica de Valencia • 2001 - 2005 </li>
-                </ul>
-                <br>
-                <br>
-            </ul>
-
-        </article>
-
-    </section>
-
-
-
-    <section id="experiencia">
-        <header class="header-experiencia">
-            <h1>Experiencia prueba</h1>
-        </header>
-
-        <article>
-            <ul>
-                <li>Human Resources Operation Manager • Recrufrance • Septiembre 2014 - Enero 2018</li>
-                <br>
-                <ul>
-                    <li>Encargado de reclutamiento de personal sanitario para trabajar en Francia</li>
-                    <li>Gestión de toda la documentación necesaria para la incorporación al mercado laboral del personal sanitario</li>
-                </ul>
-                <br>
-                <br>
-                <li>European Project Manager • Freelance • Octubre 2013 - Mayo 2014</li>
-                <br>
-                <ul>
-                    <li>Realización de memorias para obtener financiación de empresas</li>
-                </ul>
-                <br>
-                <br>
-                <li>Director • Global Web Talent • Diciembre 2013 - Actualidad</li>
-                <br>
-                <ul>
-                    <li>Desarrollo de páginas web para distintos sectores</li>
-                </ul>
-                <br>
-                <br>
-                <li>Director de Área De Financiación y Ayudas Públicas • Altair Consultores • Septiembre 2008 - Octubre 2013</li>
-                <br>
-                <ul>
-                    <li>Realización de planes de negocio para distintos tipos de sectores</li>
-                    <li>Acciones comerciales de los servicios del departamento</li>
-                    <li>Realización y cumplimiento del presupuesto económico</li>
-                    <li>Gestión y dirección del equipo humano para la consecución de los objetivos</li>
-                </ul>
-                <br>
-                <br>
-            </ul>
-
-        </article>
-
-
-    </section>
-
-
-
-    <section id="sobremi">
-        <header class="header-sobremi">
-            <h1>Sobre mí</h1>
-        </header>
-
-        <p> Mi pasión es ayudar a resolver problemas empresariales y aportar soluciones de negocio mediante la utilización de las tecnologías de la información más adecuadas a cada proyecto</p>
-
-        <video controls width="250">
-
-            <source src="assets/video2.mp4">
-        </video>
-    </section>
-
-
-    <section id="contacto-section">
-        <header class="header-contacto">
-            <h1>Contáctame</h1>
-        </header>
-        <p>Enviame tus datos de contacto para que podamos colaborar</p>
-        <form action="" id="contacto">
-            <ul>
-                <li>
-                    <label for="name">Nombre</label>
-                    <input type="text" name="name" id="name" placeholder="Nombre" required>
-                </li>
-
-                <li>
-                    <label for="email">Email</label>
-                    <input type="email" name="name" id="email" placeholder="Email">
-                </li>
-
-                <li>
-                    <label for="seleccion">Cómo me has conocido?</label>
-                    <select name="seleccion" id="seleccion" required>
-                        <option value="op1">Linkedin</option>
-                        <option value="op2">Infojobs</option>
-                        <option value="op3">Otros</option>
-                    </select>
-                </li>
-
-                <li>
-                    <label for="numero">Número contacto</label>
-                    <input type="text" name="name" id="numero" placeholder="Nombre" required>
-                </li>
-
-                <li>
-                    <label for="textarea">Mensaje limitado a 150 palabras</label>
-                    <textarea name="ta" id="textarea" cols="30" rows="10"></textarea>
-
-                </li>
-
-            </ul>
+                <video controls>
+                    <source src="assets/video2.mp4">
+                    <source src="assets/video2.webm">
+                </video>
+            </section>
+            <section id="contacto2">
+                <header class="header-contacto">
+                    <h1>Contáctame</h1>
+                    <p>Seguro que podemos colaborar</p>
+                </header>
+                <form action="" id="contacto">
+                    <ul>
+                        <li class="contacto-campo">
+                            <label for="name">Nombre</label>
+                            <input type="text" name="name" id="name" placeholder="Nombre" required>
+                        </li>
+                        <li class="contacto-campo">
+                            <label for="email">Email</label>
+                            <input type="email" name="name" id="email" placeholder="Email">
+                        </li>
+                        <li class="contacto-campo">
+                            <label for="seleccion">Cómo me has conocido?</label>
+                            <select name="seleccion" id="seleccion" required>
+                                <option value="op1">Linkedin</option>
+                                <option value="op2">Infojobs</option>
+                                <option value="op3">Otros</option>
+                            </select>
+                        </li>
+                        <li class="contacto-campo">
+                            <input type="text" class="otros" name="otros">
+                        </li>
+                        <li class="contacto-campo">
+                            <label for="numero">Número contacto</label>
+                            <input type="text" name="name" id="numero" placeholder="Nombre" required>
+                        </li>
+                        <li class="contacto-campo">
+                            <label for="textarea">Otros datos que deba saber</label>
+                            <textarea name="ta" id="textarea" cols="30" rows="10" onkeypress="return countit(this,2)"></textarea>
+                        </li>
+                    </ul>
 
             <button class="boton" type="submit" id="send">Enviar</button>
 
@@ -241,13 +248,13 @@
 
  <!--</main>-->
 
-    </main>
+        </main>
 
     </div>
 
 </body>
 <footer>
-    copyrigth
+    copyrigth 2018
 </footer>
 
 </html>
